Especificar archivo de pruebas en la ejecución de pytest y eliminar líneas en blanco del archivo requirements.txt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
           DB_HOST: localhost
           DB_PORT: 5432
         run: |
-          pytest
+          pytest products/tests.py
 
   build:
     name: Build Docker Image
