--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = lims.settings
+DJANGO_SETTINGS_MODULE = config.settings
 # Configuración de cobertura
 addopts = --cov=. --cov-report=xml --cov-report=html --cov-report=term
 # Configuración de paths para que sean relativos al directorio raíz
