--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,3 +87,39 @@ jobs:
       - name: Build image
         run: |
           docker build -t proyect_ci:latest .
+
+  deploy:
+      name: Deploy to Server (Docker)
+      runs-on: ubuntu-latest
+      needs: build
+
+      steps:
+        - uses: actions/checkout@v4
+
+        - name: Deploy via SSH
+          uses: appleboy/ssh-action@v1.0.0
+          with:
+            host: ${{ secrets.SERVER_HOST }}
+            username: ${{ secrets.SERVER_USER }}
+            key: ${{ secrets.SERVER_SSH_KEY }}
+            script: |
+              cd /var/www/mi_proyecto
+
+              echo " Actualizando código..."
+              git pull origin main
+
+              echo " Construyendo y levantando contenedores..."
+              docker compose down
+              docker compose build
+              docker compose up -d
+
+              echo " Ejecutando migraciones..."
+              docker compose exec app php artisan migrate --force
+
+              echo " Limpiando cache..."
+              docker compose exec app php artisan config:clear
+              docker compose exec app php artisan cache:clear
+              docker compose exec app php artisan route:clear
+              docker compose exec app php artisan view:clear
+
+              echo " ------------------Deploy completado------------------- "
